# vue-flask-example

./: .gitignore
backend/: README.md  app.py  pyproject.toml
frontend/: package-lock.json
frontend/src/components/: Books.vue  Ping.vue
frontend/src/router/: index.js
