[tool.poetry]
name = "vue-flask-example"
version = "0.1.0"
description = ""
authors = ["wmhe <william.he56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.3"
flask-cors = "3.0.10"
werkzeug = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
